--- a/style.css
+++ b/style.css
@@ -33,3 +33,28 @@ label{
   font-weight: bold;
   box-shadow: 0 3px 2px -2px var(--shadowColor);
 }
+
+input{
+  width: 100%;
+  border-radius: 5px;
+  box-shadow: inset 0 2px 4px 0 var(--shadowColor);
+  font-size: 14px;
+  padding: .8em 1em;
+  box-sizing: border-box;
+  border: 1px solid var(--shadowColor);
+  margin-bottom: 1em;
+  outline: 0;
+}
+
+input:focus {
+  box-shadow: 0 0 10px 0 rgba(255, 255, 255, .5);
+}
+button {
+  color: white;
+  background: #682577;
+  border: none;
+  width: 100%;
+  padding: .8em 1em;
+  border-radius: 5px;
+  font-size: 1em;
+}
